# nrf-playground

./: Cargo.toml  Makefile  README.md  memory.x
.cargo/: config
config/: laird.cfg  olimex.cfg  openocd.gdb
src/: common.rs  main.rs
