[package]
name = "firmware"
version = "0.1.0"
authors = ["Nicolas goy <kuon@goyman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "firmware"
test = false
bench = false


[dependencies]
cortex-m = { version = "0.6.3", features = [ "inline-asm" ] }
cortex-m-rt = "0.6.13"
#cortex-m-rtic = "0.5.3"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }
nrf52840-hal = { version="0.11", features = ["rt"] }
panic-semihosting = "0.5.3"
nrf-softdevice = { git ="https://github.com/akiles/nrf-softdevice", features = ["nrf52840", "s140", "ble-peripheral"] }
nrf-softdevice-s140 = { git="https://github.com/akiles/nrf-softdevice" }

[patch.crates-io]
defmt = { git = "https://github.com/knurling-rs/defmt", branch="main" }
defmt-rtt = { git = "https://github.com/knurling-rs/defmt", branch="main" }
nrf52840-pac = { git = "https://github.com/Dirbaio/nrf52840-pac" }
cortex-m = { git = "https://github.com/Dirbaio/cortex-m"}

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.4"


